tests/snapshots/tui/training_push_confirm_120x40.snap
---
source: src/tui/snapshots.rs
---
" ⠿ overbrainer   1 Project  2 Dataset  3 Pipeline  4 Training  5 Logs                                       rust_expert "
"╭ runs ────────────────────────────────────────────────────────────────────╮╭ system ──────────────────────────────────╮"
"│ run                   state      target     pod                          ││ no sample: not followed                  │"
"│ 20260921-133200-a1b2  running    gpu_cloud  ready k3x9abc $0… followed   ││                                          │"
"│ 20260920-101500-9f00  succeeded  homelab                                 ││                                          │"
"│ 20260919-090000-c3d4  running    homelab                                 ││                                          │"
"╰──────────────────────────────────────────────────────────────────────────╯╰──────────────────────────────────────────╯"
"  20260920-101500-9f00                                                                                                  "
"                                                                                                                        "
"  not followed: press a to attach                                                                                       "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                        ╭ Push run 20260920-101500-9f00? ──────────────────────────────────────╮                        "
"                        │                                                                      │                        "
"                        │  repo <you>/rust-expert                                              │                        "
"                        │  visibility private if created; an existing public repo is refused   │                        "
"                        │  2 files, 1.2 GB                                                     │                        "
"                        │                                                                      │                        "
"                        │                                                 y push    n cancel   │                        "
"                        │                                                                      │                        "
"                        ╰──────────────────────────────────────────────────────────────────────╯                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
" y push · n, Esc or Enter cancel                                                             … 1 training task · ? help "
