tests/snapshots/tui/training_push_confirm_80x24.snap
---
source: src/tui/snapshots.rs
---
" ⠿ overbrainer   1 Project  2 Dataset  3 Pipeline  4 Training  5 Logs  rust_ex… "
"╭ runs ────────────────────────────────────────────────────────────────────────╮"
"│ run                   state      target     pod                              │"
"│ 20260921-133200-a1b2  running    gpu_cloud  ready k3x9abc $0.53/h followed   │"
"│ 20260920-101500-9f00  succeeded  homelab                                     │"
"│ 20260919-090000-c3d4  running    homelab                                     │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"  2                                                                             "
"  n ╭ Push run 20260920-101500-9f00? ──────────────────────────────────────╮    "
"    │                                                                      │    "
"    │  repo <you>/rust-expert                                              │    "
"    │  visibility private if created; an existing public repo is refused   │    "
"    │  2 files, 1.2 GB                                                     │    "
"    │                                                                      │    "
"    │                                                 y push    n cancel   │    "
"    │                                                                      │    "
"    ╰──────────────────────────────────────────────────────────────────────╯    "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" y push · n, Esc or Enter cancel                     … 1 training task · ? help "
