tests/snapshots/tui/training_quit_80x24.snap
---
source: src/tui/snapshots.rs
---
" ⠿ overbrainer   1 Project  2 Dataset  3 Pipeline  4 Training  5 Logs  rust_ex… "
"╭ runs ────────────────────────────────────────────────────────────────────────╮"
"│ run                   state      target     pod                              │"
"│ 20260921-133200-a1b2  running    gpu_cloud  ready k3x9abc $0.53/h followed   │"
"│ 20260920-101500-9f00  succeeded  homelab                                     │"
"│ 20260919-090000-c3d4  running    homelab                                     │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"  ●                                                                             "
"  e ╭ Quit overbrainer? ───────────────────────────────────────────────────╮    "
"  p │                                                                      │    "
"  2 │  Run 20260921-133200-a1b2 keeps running on pod k3x9abc ($0.53/h);    │    "
"  l │  attach again from here or with `overbrainer train attach            │ l  "
"  1 │  20260921-133200-a1b2`.                                              │    "
"    │                                                                      │    "
"    │                                                   y quit    n stay   │    "
"    │                                                                      │    "
"    ╰──────────────────────────────────────────────────────────────────────╯    "
"                                                                             •  "
"  0.80  │                                                 ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀   "
"        └─────────────────────────────────────────────────────────────────────  "
"  step 10                                                                 1200  "
"  lr        ▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄ 2.00e-4    "
"  grad_norm  ▂▄▆█ ▂▄▆█ ▂▄▆█ ▂▄▆█ ▂▄▆█ ▂▄▆█ ▂▄▆█ ▂▄▆█ ▂▄▆█ ▂▄▆█ ▂▄▆█  0.700      "
" y quit · n, Esc or Enter stay                       … 1 training task · ? help "
