tests/snapshots/tui/training_stopped_80x24.snap
---
source: src/tui/snapshots.rs
---
" ⠿ overbrainer   1 Project  2 Dataset  3 Pipeline  4 Training  5 Logs  6 Compare"
"╭ runs ────────────────────────────────────────────────────────────────────────╮"
"│ run                   state      target     pod                              │"
"│ 20260921-133200-a1b2  running    gpu_cloud  ready k3x9abc $0.53/h followed   │"
"│ 20260920-101500-9f00  stopped    homelab                                     │"
"│ 20260919-090000-c3d4  running    homelab                                     │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"  20260920-101500-9f00  step 400/4000 █▋               10%                      "
"  epoch 0.30  snapshot at step 400 (requested), output/ partial: T resumes it   "
"  loss                                                         ─ train  • eval  "
"  1.88 │▄                                                                       "
"       │ █                                                                      "
"       │ ▀▄                                                                     "
"       │  █▄                                                                    "
"       │   •                                                                    "
"       │    █                                                                   "
"       │    ▀█                                                                  "
"       │      █•                                                                "
"  1.30 │      ▀▀                                                                "
"       └──────────────────────────────────────────────────────────────────────  "
"  step 0                                                                  4000  "
"  lr             ▁▁▁▁▁▂▂▂▂▂▃▃▃▃▃▄▄▄▄▄▅▅▅▅▅▆▆▆▆▆▇▇▇▇█                 1.47e-4    "
"  grad_norm ▂▄▆█ ▂▄▆█ ▂▄▆█ ▂▄▆█ ▂▄▆█ ▂▄▆█ ▂▄▆█ ▂▄▆█                  0.700      "
" j/k select · a attach · c cancel     … 1 training task · $0.36  v#.#.#  ? help "
