tests/snapshots/tui/training_system_120x40.snap
---
source: src/tui/snapshots.rs
---
" ⠿ overbrainer   1 Project  2 Dataset  3 Pipeline  4 Training  5 Logs                                       rust_expert "
"╭ runs ────────────────────────────────────────────────────────────────────╮╭ system ──────────────────────────────────╮"
"│ run                   state      target     pod                          ││ disk ████▋   78% ▆▆▆▆▆▆  shared 1.7/2.2T │"
"│ 20260921-133200-a1b2  running    gpu_cloud  ready k3x9abc $0… followed   ││ root █████▎  87% ▆▆▆▆▆▆  17/20G          │"
"│ 20260920-101500-9f00  succeeded  homelab                                 ││ cpu  ███     50% ▄▄▄▄▄▄  4.0/8.0 cores   │"
"│ 20260919-090000-c3d4  running    homelab                                 ││ mem  ██▎     38% ▃▃▃▃▃▃  48/128G         │"
"│                                                                          ││ gpu0 ████▎   71% ▄▅▅▅▅▅  77/80G 60C 312W │"
"│                                                                          ││ gpu1 ██████  99% ▇▇▇▇▇▇  40/80G 61C 312W │"
"╰──────────────────────────────────────────────────────────────────────────╯╰──────────────────────────────────────────╯"
"  ● 20260921-133200-a1b2  step 1200/4000 ████▊            30%  ETA 1h33m                                                "
"  epoch 0.90                                                                                                            "
"                                                                                                                        "
"  pod k3x9abc ready $0.53/h  up 41m (about $0.36)  the watchdog deletes it by 2026-09-21T19:32:20Z                      "
"                                                                                                                        "
"  loss                                                                                                 ─ train  • eval  "
"  1.88 │                                                                                                                "
"       │▀█                                                                                                              "
"       │ ▀▄                                                                                                             "
"       │  ▀▄                                                                                                            "
"       │   ▀▄                                                                                                           "
"       │    ▀•                                                                                                          "
"       │     ▀▄                                                                                                         "
"       │      ▀█                                                                                                        "
"       │       ▀█                                                                                                       "
"       │         █▄•                                                                                                    "
"       │          ▀▄                                                                                                    "
"       │           ▀█                                                                                                   "
"       │             █▄                                                                                                 "
"       │              ▀█•                                                                                               "
"       │                ▀▄                                                                                              "
"       │                  ▀█▄ •                                                                                         "
"       │                    ▀█▄    •                                                                                    "
"       │                      ▀▀▄▄       •                                                                              "
"       │                          ▀▀█▄▄▄▄                                                                               "
"  0.80 │                                                                                                                "
"       └──────────────────────────────────────────────────────────────────────────────────────────────────────────────  "
"  step 0                                                                                                          4000  "
"  lr             ▁▁▁▁▂▂▂▂▂▃▃▃▃▄▄▄▄▅▅▅▅▅▆▆▆▆▇▇▇▇█████████████████████████████████████████████████████████████ 2.00e-4    "
"  grad_norm  ▂▄▆█ ▂▄▆█ ▂▄▆█ ▂▄▆█ ▂▄▆█ ▂▄▆█ ▂▄▆█ ▂▄▆█ ▂▄▆█ ▂▄▆█ ▂▄▆█ ▂▄▆█ ▂▄▆█ ▂▄▆█ ▂▄▆█ ▂▄▆█ ▂▄▆█ ▂▄▆█ ▂▄▆█  0.700      "
" j/k select · a attach · c cancel · t start · h push · x clear · p pod        … 1 training task · $0.36  v#.#.#  ? help "
